--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
     playbook: test.yml
   - distro: 'ubuntu:16.04'
     playbook: test.yml
+  - distro: 'ubuntu:14.04'
+    playbook: test.yml
   - distro: debian:8
     playbook: test.yml
   - distro: debian:9
