--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,20 @@
 services: docker
 
 env:
-  - distro: centos:7
+  - distro: centos7
     playbook: test.yml
-  - distro: 'ubuntu:16.04'
+  - distro: ubuntu:1604
     playbook: test.yml
-  - distro: debian:8
+  - distro: ubuntu:1404
     playbook: test.yml
-  - distro: debian:9
+  - distro: ubuntu:1804
+    playbook: test.yml
+  - distro: debian8
+    playbook: test.yml
+  - distro: debian9
     playbook: test.yml
 
-  - distro: 'ubuntu:16.04'
+  - distro: ubuntu:1604
     playbook: test_networktopology.yml
 
 script:
@@ -21,7 +25,7 @@ script:
   - export cleanup=false
 
   # Download test shim.
-  - wget -O ${PWD}/tests/test.sh https://gitlab.ninux.org/snippets/10/raw
+  - wget -O ${PWD}/tests/test.sh https://gist.githubusercontent.com/geerlingguy/73ef1e5ee45d8694570f334be385e181/raw/
   - chmod +x ${PWD}/tests/test.sh
 
   # Run tests.
