--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ services: docker
 env:
   - distro: centos7
     playbook: test.yml
-  - distro: ubuntu:1604
+  - distro: ubuntu1604
     playbook: test.yml
-  - distro: ubuntu:1404
+  - distro: ubuntu1404
     playbook: test.yml
-  - distro: ubuntu:1804
+  - distro: ubuntu1804
     playbook: test.yml
   - distro: debian8
     playbook: test.yml
